# ditto-cache

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.dittod-build  LICENSE  NEXT_SESSION.md  README.md
.github/: dependabot.yml  required-checks.json
.github/workflows/: chaos-dry-run.yml  codeql.yml  coverage-report.yml  perf-gate.yml  preprod-runbook-validation.yml  protocol-contract.yml  release-gate.yml  security-scan.yml
.tmp-perf/: perf-node.toml
ditto-config/: Cargo.toml
ditto-config/src/: lib.rs
ditto-mgmt/: Cargo.toml
ditto-mgmt/src/: audit.rs  auth.rs  config.rs  main.rs  node_client.rs  tls.rs
ditto-mgmt/src/api/: cache.rs  cluster.rs  doctor.rs  mod.rs  nodes.rs
ditto-mgmt/src/app/: cache.rs  mod.rs  nodes.rs
ditto-mgmt/src/bootstrap/: mod.rs
ditto-mgmt/src/policy/: cache_value_redaction.rs  mod.rs
ditto-mgmt/src/web/: index.html  mod.rs
ditto-mgmt/src/web/assets/: app.js
ditto-protocol/: Cargo.toml  build.rs
ditto-protocol/proto/: ditto.proto
ditto-protocol/schema/: protocol-contract.json
ditto-protocol/src/: admin.rs  client.rs  cluster.rs  common.rs  frame.rs  gossip.rs  lib.rs
dittoctl/: Cargo.toml  kvctl.toml
dittoctl/src/: bootstrap.rs  client.rs  config.rs  main.rs  password.rs  tls.rs
dittoctl/src/commands/: cache.rs  cluster.rs  mod.rs  node.rs  node_support.rs
dittod/: Cargo.toml  node.toml
dittod/src/: admin_audit.rs  backup.rs  backup_support.rs  config.rs  main.rs  node.rs  runtime_property.rs
dittod/src/bootstrap/: env_overrides.rs  logging.rs  mod.rs  runtime.rs  security.rs  startup.rs
dittod/src/gossip/: engine.rs  mod.rs
dittod/src/network/: client_auth.rs  cluster_server.rs  http_server.rs  http_support.rs  mod.rs  tcp_server.rs  tls.rs
dittod/src/node/: admin.rs  client.rs  cluster.rs  hot_key.rs  lifecycle.rs  observability.rs  read_repair.rs  replication_apply.rs  tenancy.rs  tests.rs  traffic_policy.rs  util.rs  write.rs
dittod/src/node/background/: anti_entropy.rs  mod.rs  recovery.rs
dittod/src/replication/: active_set.rs  mod.rs  write_log.rs
dittod/src/store/: capacity.rs  compression.rs  kv_store.rs  lfu.rs  mod.rs  retention.rs  ttl.rs
docs/: admin-guide.md  architecture.md  backlog-guide.md  chaos-playbook.md  dittoctl-reference.md  docker-setup.md  known-limitations.md  operations-runbook.md  perf-baseline.json  production-candidate-signoff.md  production-readiness-review.md  release-readiness-checklist.md  security-scanning.md  test-guide.md
release/: backup-restore-policy.json  coverage-threshold-policy.json  dast-evidence.json
scripts/: chaos-smoke.ps1  generate-protocol-contract.ps1  perf-baseline.json  perf-gate.ps1  preprod-runbook-validate.ps1  validate-backup-restore-policy.py  validate-coverage-thresholds.py  validate-dast-evidence.py  validate-repo-hygiene.py
site/: index.html
site/assets/css/: fonts.css  style.css
site/assets/js/: main.js
