[workspace]
members = [
    "ditto-config",
    "ditto-protocol",
    "dittod",
    "dittoctl",
    "ditto-mgmt",
]
resolver = "2"

[workspace.dependencies]
if-addrs = "0.13"
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
prost        = "0.14"
bytes        = { version = "1", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "v5", "serde"] }
tracing          = "0.1"
tracing-appender = "0.2"
anyhow       = "1"
thiserror    = "1"
toml           = "0.8"
tokio-rustls   = "0.26"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pki-types = { version = "1", features = ["std"] }
axum           = { version = "0.8.8", features = ["json"] }
serde_json     = "1"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64         = "0.22"
sha2           = "0.10"
axum-server    = { version = "0.8", features = ["tls-rustls-no-provider"] }
aes-gcm        = "0.10"
