[package]
name    = "ditto-mgmt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ditto-mgmt"
path = "src/main.rs"

[dependencies]
ditto-config   = { path = "../ditto-config" }
ditto-protocol = { path = "../ditto-protocol" }

tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
bincode        = { workspace = true }
bytes          = { workspace = true }
anyhow         = { workspace = true }
toml           = { workspace = true }
uuid           = { workspace = true }
tokio-rustls   = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }
tracing        = { workspace = true }
axum           = { workspace = true }
reqwest        = { workspace = true }
base64         = { workspace = true }
bcrypt         = "0.19"
axum-server    = { workspace = true }
dirs           = "6"
