[package]
name    = "ditto-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde   = { workspace = true }
prost   = { workspace = true }
bytes   = { workspace = true }
uuid    = { workspace = true }
anyhow  = { workspace = true }

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
