[package]
name    = "dittoctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dittoctl"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
anyhow     = { workspace = true }
toml       = { workspace = true }
serde_json = { workspace = true }
reqwest    = { workspace = true }
base64     = { workspace = true }

bcrypt = "0.15"
clap  = { version = "4", features = ["derive"] }
dirs  = "5"
