[package]
name    = "dittoctl"
version.workspace = true
edition = "2021"

[[bin]]
name = "dittoctl"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
anyhow     = { workspace = true }
toml       = { workspace = true }
serde_json = { workspace = true }
reqwest    = { workspace = true }
base64     = { workspace = true }

bcrypt = "0.19"
clap  = { version = "4", features = ["derive"] }
dirs  = "6"
