[package]
name    = "dittod"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dittod"
path = "src/main.rs"

[dependencies]
ditto-config   = { path = "../ditto-config" }
ditto-protocol = { path = "../ditto-protocol" }

tokio         = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
bytes         = { workspace = true }
uuid          = { workspace = true }
tracing          = { workspace = true }
tracing-appender = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
toml          = { workspace = true }

axum          = { workspace = true }
axum-server   = { workspace = true }
bcrypt        = "0.19"
base64        = { workspace = true }
lz4_flex       = "0.13"
tokio-rustls   = { workspace = true }
rustls         = { workspace = true }
rustls-pemfile = { workspace = true }
dashmap       = "6.1"
serde_json    = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util    = { version = "0.7", features = ["codec"] }
cronexpr      = "1.3"
chrono        = { version = "0.4", default-features = false, features = ["clock", "std"] }
aes-gcm       = { workspace = true }
rand          = "0.10.1"
hex           = "0.4"
